<resources>
    <string name="app_name">Ksatria Muslim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reader">Reader</string>
    <string name="about">About</string>
    <string name="background_image">Background Image</string>
    <string name="next_page">Next Page</string>
    <string name="prev_page">Prev Page</string>
    <string name="back_to_home">Back To Home</string>
    <string name="updateData">update_data</string>
    <string name="ksatriamuslim_tagline">Anak adalah aset. Mari bersama melangkah untuk mendidik mereka</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="hi_orang_tua">Hi orang tua</string>
    <string name="masuk">Login dahulu yuk</string>
    <string name="login_error_title">Login Error</string>
    <string name="email">Email</string>
    <!--    <string name="ksatriamuslim_web_id">440202219688-qgtqdmh8f2c23aih4vo4g390egsag1iv.apps.googleusercontent.com</string>-->
    <!--<string name="default_web_client_id">440202219688-qgtqdmh8f2c23aih4vo4g390egsag1iv.apps.googleusercontent.com</string>-->
</resources>