<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReadingFragment">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/background_image"
        android:contentDescription="@string/background_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ini Adalah text yang akan dibaca sama anak anak \n Perlu yang panjang sekali sebetulnya"
        android:textSize="35sp"
        android:textAlignment="center"
        android:fontFamily="@font/playtime"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/main_text"
        />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/next_icon"
        android:src="@drawable/ic_arrow_circle_right_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/next_page" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/prev_icon"
        android:src="@drawable/ic_arrow_circle_left_solid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/prev_page" />


</androidx.constraintlayout.widget.ConstraintLayout>